# ftd_auth

./: .gitignore  LICENSE  MANIFEST.in  README.rst  Roadmap.md  buildspec.yaml  pyproject.toml  setup.cfg  setup.py
ftd_auth/: settings.py  urls.py
ftd_auth/api/: userApi.py
ftd_auth/serializers/: userSerializer.py
ftd_auth/templates/: reset-password.html  verify-email.html
