[tool.poetry]
name = "ftd_auth"
version = "0.1.3"
description = ""
authors = ["shanaka11 <shanakaabeysinghe@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
djangorestframework = "^3.12.4"
djangorestframework-simplejwt = "^5.0.0"
django-cors-headers = "^3.10.0"
django-environ = "^0.8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
